--- a/styles.css
+++ b/styles.css
@@ -36,7 +36,7 @@ input {
   border: none;
 }
 
-input[type="number"]::placeholder {
+input[type="text"]::placeholder {
   color: #999;
   font-style: italic;
   font-weight: 300;
@@ -67,6 +67,7 @@ input[type="number"]::placeholder {
   border-radius: 5px;
   color: #0c2d57;
   font-size: 14px;
+  display: none;
 }
 
 .description {
